# Article-Retrieval-System

./: README.md  pyproject.toml
notebooks/: test.ipynb
scripts/: preprocess.py  search.py
src/ai/: model.py  utils.py
