[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "article-retrieval-system"
version = "0.0.1"
description = "Nokia - Machine Learning Summer Trainee - recruitment task"
requires-python = ">= 3.9, < 3.12"
dependencies = [
    "torch ~= 2.2",
    "scipy ~= 1.13",
    "numpy ~= 1.26.4",
    "transformers ~= 4.39.3",
    "nltk ~= 3.8.1",
    "pandas ~= 2.2.1",
    "sentence-transformers ~= 2.6.1",
    "spacy ~= 3.7.4",
    "tqdm ~= 4.66.2",
    "hnswlib ~= 0.8.0",
]
[project.urls]
"Source" = "https://github.com/AgataGro/Article-Retrieval-System"


[project.optional-dependencies]
jupyter = [
    "jupyterlab~=3.6",
    "matplotlib ~= 3.7",
    "plotly ~= 5.14",
]
lint = ["ruff ~= 0.1", "pre-commit ~= 2.20"]
test = [
    "pytest ~= 7.1",
    "pytest-cases ~= 3.6",
    "pytest-cov ~= 3.0",
    "pytest-xdist ~= 2.5",
    "pytest-sugar ~= 0.9",
]
dev = ["article-retrieval-system[jupyter, lint, test]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    # "UP",  # pyupgrade
]
line-length = 120
ignore = [
    # "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]
extend-exclude = [".venv/", "build/", "dist/", "docs/"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.isort]
order-by-type = true
lines-between-types = 1
combine-as-imports = true
# known_first_party = "common"